--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -179,7 +179,7 @@
                 </button>
 
                 <!-- Icona matita -->
-                <button type="button " class="btn-icon" data-bs-toggle="modal">
+                <button type="button " class="btn-icon">
                   <a routerLink="esperienze">
                     <i class="bi bi-pencil text-secondary"></i
                   ></a>
