--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -39,7 +39,7 @@
               <!-- Button trigger modal -->
               <button
                 type="button"
-                class="btn mt-5 mb-3 ms-4"
+                class="mt-5 mb-3 ms-4 btn-icon"
                 data-bs-toggle="modal"
                 data-bs-target="#formModal"
               >
@@ -233,13 +233,12 @@
               <p class="bold">lingua del profilo</p>
               <button
                 type="button"
-                class="btn"
+                class="btn-icon"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal"
               >
-                <i class="bi bi-pencil ms-3"></i>
+                <i class="bi bi-pencil"></i>
               </button>
-
               <!-- Modal -->
               <div
                 class="modal fade"
@@ -302,7 +301,10 @@
           <div class="linkedin-box-content">
             <div class="d-flex justify-content-between">
               <p>Public profile & URl</p>
-              <a href="" class="unstyle"> <i class="bi bi-pencil ms-3"></i></a>
+
+              <button type="button " class="btn-icon">
+                <a> <i class="bi bi-pencil text-secondary"></i></a>
+              </button>
             </div>
             <p class="text">link non apribile</p>
           </div>
