--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,40 @@
-<div *ngFor="let post of posts">
-  <img [src]="post.user.image" />
-  {{ post.user.name }} {{ [post.user.surname] }} <br />
-  {{ post.user.title }}
-  {{ post.createdAt }}
-  <br />
-  <br />
-  {{ post.text }}
+<div id="empty"></div>
+
+<div
+  class="container-fluid w-100 mt-5 d-flex justify-content-center"
+  *ngFor="let post of posts"
+>
+  <div class="card">
+    <div class="card-body">
+      <div class="d-flex">
+        <img [src]="post.user.image" class="card-img-top" alt="..." />
+        <h3 class="card-title fw-bold">
+          {{ post.user.name }} {{ post.user.surname }}
+        </h3>
+      </div>
+      <p class="card-text fs-6 text-secondary">
+        {{ post.user.title }}
+        <br />
+
+        {{ post.createdAt | dateDay }}
+        <br />
+      </p>
+      <p class="fs-5">{{ post.text }}</p>
+    </div>
+
+    <div class="mt-3 mb-3">
+      <a href="#" class="mx-4 text-decoration-none fs-6 text-black fw-bold"
+        ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
+      >
+      <a href="#" class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+        ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
+      >
+      <a href="#" class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+        ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
+      >
+      <a href="#" class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+        ><i class="bi bi-share"></i> &nbsp; Invia</a
+      >
+    </div>
+  </div>
 </div>
