--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,3 +6,21 @@
 .box {
   width: 75%;
 }
+
+#empty{
+  margin-top:100px
+}
+
+.card{
+  width: 600px;
+
+
+}
+
+img{
+  width: 30px;
+  border-radius: 40px;
+  height: 30px;
+  margin-right: 20px;
+
+}
