--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -22,7 +22,9 @@
             <span class="fw-bold">Competenze:</span>CSS HTML Jquery Javascript
             SQL
           </p>
-          <button (click)="deleteExperience(experience._id)">ciao</button>
+          <button (click)="modifica(experience._id)">
+            <i class="bi bi-pencil text-secondary"></i>
+          </button>
         </div>
       </div>
     </div>
