--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -96,11 +96,12 @@
                 <button
                   type="button"
                   class="btn btn-blue align-items-center w-75 mx-auto"
+                  routerLink="profile"
                 >
                   Visualizza profilo
                 </button>
               </li>
-              <li class="dropdown-item" routerLink="profile">Account</li>
+              <li class="dropdown-item fw-bold">Account</li>
               <li class="dropdown-item">Prova Premium gratis</li>
               <li class="dropdown-item">Impostazioni e privacy</li>
               <li class="dropdown-item">Guida</li>
