--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -82,8 +82,7 @@ nav{
 // dropdown component of the user
 #me{
   border-right: solid 1px gainsboro;
-  margin-right: 10px;
- padding-right: 10px;
+
 }
 
 
@@ -110,7 +109,7 @@ nav{
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 999;
+  z-index: 1;
 }
 
 // each item of the dropdown list
@@ -172,4 +171,18 @@ nav{
 .hidden-div {
   opacity: 0;
 
+}
+
+#navbarNav{
+ background-color: white;
+ height: 65px;
+ border-bottom: solid 1px gainsboro;
+}
+
+@media screen and (max-width: 750px) {
+
+  #navbarNav{
+    background-color: white;
+    height: 500px;
+  }
 }
