--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -25,6 +25,7 @@
           <button (click)="modifica(experience._id)">
             <i class="bi bi-pencil text-secondary"></i>
           </button>
+          <button (click)="deleteExperience(experience._id)"></button>
         </div>
       </div>
     </div>
