--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -24,3 +24,13 @@ a {
   right: 0;
 }
 }
+#shadows{
+  box-shadow:  -5px 7px 19px 7px rgba(166,166,166,0.5);
+  padding: 1em;
+  width: 30vw;
+}
+
+#shadows li{
+  color: grey;
+  margin: 0.5em
+}
