--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -133,7 +133,7 @@
         <div>
           <i class="bi bi-three-dots"></i>
           <i class="bi bi-pencil-square"></i>
-          <i class="bi bi-caret-up"></i>
+          <i class="bi bi-caret-up fs-4"></i>
         </div>
       </button>
 
@@ -146,14 +146,19 @@
         <div class="offcanvas-header justify-content-end">
           <div class="d-flex align-items-center flex-grow-1">
             <i class="bi bi-person-circle fs-3 p-2"></i>
-            <p class="offcanvas-title" id="offcanvasBottomLabel">
+            <p
+              class="offcanvas-title fw-semibold fs-6 m-0"
+              id="offcanvasBottomLabel"
+            >
               Messaggistica
             </p>
           </div>
-          <div>
-            <i class="bi bi-three-dots"></i>
-            <i class="bi bi-pencil-square"></i>
-            <i class="bi bi-caret-up"></i>
+          <div class="flex-grow-1 d-flex justify-content-end">
+            <div>
+              <i class="bi bi-three-dots fs-4"></i>
+              <i class="bi bi-pencil-square fs-4"></i>
+              <!-- <i class="bi bi-caret-up fs-4"></i> -->
+            </div>
           </div>
 
           <button
@@ -163,11 +168,71 @@
             aria-label="Close"
           ></button>
         </div>
-        <div class="offcanvas-body small">
-          <input placeholder="Cerca messaggi" />
-        </div>
+        <!-- Navbar -->
+        <nav class="navbar bg-body-tertiary w-25">
+          <div class="container">
+            <form class="d-flex align-items-center" role="search">
+              <i class="bi bi-search mx-2"></i>
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <!-- Hamburgher -->
+              <div class="btn-group dropup">
+                <button
+                  type="button"
+                  class="btn dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="bi bi-list-nested"></i>
+                </button>
+                <ul id="shadows" class="dropdown-menu">
+                  <!-- Dropup menu links -->
+                  <li>Archiviati</li>
+                  <li>I miei collegamenti</li>
+                  <li>Contrassegnati con una stella</li>
+                  <li>Da leggere</li>
+                  <li>Messaggi InMail</li>
+                  <li>Posta indesiderata</li>
+                </ul>
+              </div>
+
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#">Hidden brand</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true"
+                      >Disabled</a
+                    >
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input
+                    class="form-control me-2"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                  />
+                  <button class="btn btn-outline-success" type="submit">
+                    Search
+                  </button>
+                </form>
+              </div>
+            </form>
+          </div>
+        </nav>
       </div>
     </div>
   </div>
 </div>
-<!-- prova -->
