--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -124,7 +124,7 @@
             <i class="bi bi-grid-3x3-gap-fill"></i>
 
             <button
-              class="btn"
+              class="btn text-truncate"
               type="button"
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasRight"
@@ -187,7 +187,7 @@
 >
   <!-- Offcanvas title and close button -->
   <div class="offcanvas-header">
-    <h4 id="offcanvasRightLabel">Per le aziende</h4>
+    <h4 id="offcanvasRightLabel" class="text-truncate">Per le aziende</h4>
     <button
       type="button"
       class="btn-close text-reset"
