--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -22,5 +22,14 @@ img{
   border-radius: 40px;
   height: 30px;
   margin-right: 20px;
+}
+
+.btn-send
+{
+  color: white;
+  background-color: #0a66c2;
+  border-radius: 25px;
+  width: 80px;
+  font-size: 15px;
 
 }
