--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,21 +24,27 @@
       </div>
 
       <div class="mt-3 mb-3">
-        <a href="#" class="mx-4 text-decoration-none fs-6 text-black fw-bold"
+        <a
+          href="#"
+          class="mx-4 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
           ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
         >
         <a
-          class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
           data-bs-toggle="collapse"
           href="#collapse-{{ post._id }}"
           aria-expanded="false"
           (click)="loadComments(post._id)"
           ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
         >
-        <a href="#" class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+        <a
+          href="#"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
           ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
         >
-        <a href="#" class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+        <a
+          href="#"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
           ><i class="bi bi-share"></i> &nbsp; Invia</a
         >
       </div>
