--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,8 @@ body {
   }
 }
 
-.btn-gray {
+.btn-gray
+{
   border: 1.5px solid !important;
   border-radius: 20px !important;
   color: $linkedinGray !important;
@@ -59,6 +60,16 @@ body {
   &:hover {
     background-color: darken(#ffffff, $darken) !important;
     border: 2px solid !important;
+  }
+}
+
+.btn-gray-2
+{
+  border-radius: 5px !important;
+  margin: 0px !important;
+
+  &:hover {
+    background-color: darken(#ffffff, $darken) !important;
   }
 }
 
