--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@ body {
 .linkedin-box-content {
   padding: 25px;
 }
+.p-box-contentent {
+  padding: 25px;
+  padding-bottom: 0;
+}
 
 .btn-blue {
   border: 1.5px solid $linkedinBlue !important;
