Colore ai pulsanti

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,14 +44,14 @@
         <p class="fs-5">{{ post.text }}</p>
       </div>
 
-      <div class="mt-3 mb-3">
+      <div class="my-3">
         <a
           href="#"
-          class="mx-4 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
+          class="mx-4 text-decoration-none fs-6 text-black fw-bold btn-gray-2 py-2 px-1"
           ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
         >
         <a
-          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2 py-2 px-1"
           data-bs-toggle="collapse"
           href="#collapse-{{ post._id }}"
           aria-expanded="false"
@@ -60,12 +60,12 @@
         >
         <a
           href="#"
-          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2 py-2 px-1"
           ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
         >
         <a
           href="#"
-          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2"
+          class="mx-3 text-decoration-none fs-6 text-black fw-bold btn-gray-2 py-2 px-1"
           ><i class="bi bi-share"></i> &nbsp; Invia</a
         >
       </div>
