--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,7 +73,7 @@ body {
   margin: 0px !important;
 
   &:hover {
-    background-color: darken(#ffffff, $darken) !important;
+    background-color: darken(#ffffff, 5) !important;
   }
 }
 
