--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -84,3 +84,44 @@ img{
     }
   }
 }
+
+#first-col{
+  padding-left: 60px;
+}
+
+
+
+.div-img-profile {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.cover-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.profile-img-container {
+  position: absolute;
+  top: -55%;
+  left: 30%;
+
+
+
+
+}
+
+.profile-img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+.card-body{
+  p{
+    font-size: 0.8em;
+  }
+}
