--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -114,7 +114,7 @@
 <div class="container-fluid">
   <div class="row justify-content-between">
     <div class="col col-6">
-      <p class="fw-lighter fs-6">LinkedIn Corporation &copy; 2023</p>
+      <p id="copy" class="fw-lighter fs-6">LinkedIn Corporation &copy; 2023</p>
     </div>
 
     <!-- Messaggistica -->
@@ -157,7 +157,6 @@
             <div>
               <i class="bi bi-three-dots fs-4"></i>
               <i class="bi bi-pencil-square fs-4"></i>
-              <!-- <i class="bi bi-caret-up fs-4"></i> -->
             </div>
           </div>
 
