--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -1,31 +1,57 @@
-<div class="m">
-  <div class="row ms-2 b">
-    <div *ngFor="let experience of experienceData" class="col-8">
-      <div class="d-flex">
-        <!-- Immagine azienda -->
-
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
-          height="60px"
-          width="60px"
-        />
-        <div class="ms-2">
-          <!-- Descrizione -->
-          <p class="fw-bold m-0">{{ experience.role }}</p>
-          <p class="fs-profile m-0">{{ experience.company }}</p>
-          <p class="fs-profile m-0">
-            {{ experience.startDate }} - {{ experience.endDate }} - durata
-            complessiva
-          </p>
-          <p class="fs-profile m-0">{{ experience.area }}</p>
-          <p class="fs-profile">
-            <span class="fw-bold">Competenze:</span>CSS HTML Jquery Javascript
-            SQL
-          </p>
-          <button (click)="modifica(experience._id)">
-            <i class="bi bi-pencil text-secondary"></i>
-          </button>
-          <button (click)="deleteExperience(experience._id)">delete</button>
+<div class="m container mt-5">
+  <div class="row justify-content-around">
+    <!-- Colonna centrale -->
+    <div class="col col col-12 col-md-7">
+      <div class="row">
+        <div class="col">
+          <!-- Esperienza dinamica -->
+          <div *ngFor="let experience of experienceData" class="card mt-2">
+            <div class="d-flex">
+              <!-- Immagine azienda -->
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
+                height="60px"
+                width="60px"
+              />
+              <div class="ms-2 card-body">
+                <!-- Descrizione -->
+                <p class="fw-bold m-0">{{ experience.role }}</p>
+                <p class="fs-profile m-0">{{ experience.company }}</p>
+                <p class="fs-profile m-0">
+                  {{ experience.startDate }} - {{ experience.endDate }} - durata
+                  complessiva
+                </p>
+                <p class="fs-profile m-0">{{ experience.area }}</p>
+                <p class="fs-profile">
+                  <span class="fw-bold">Competenze:</span>CSS HTML Jquery
+                  Javascript SQL
+                </p>
+                <button (click)="modifica(experience._id)">
+                  <i class="bi bi-pencil text-secondary"></i>
+                </button>
+                <button (click)="deleteExperience(experience._id)">
+                  delete
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Colonna laterale -->
+    <div class="col col-12 col-md-4">
+      <div class="row">
+        <div class="col">
+          <div class="card mt-2">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">
+                With supporting text below as a natural lead-in to additional
+                content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
