--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -67,100 +67,95 @@
           articolo</a
         >
       </div>
+    </div>
 
-      <div id="myGroup">
-        <div
-          class="container-fluid w-100 mt-5 d-flex justify-content-center panel"
-          *ngFor="let post of posts"
-        >
-          <div class="card">
-            <div class="card-body">
-              <div class="d-flex">
-                <img [src]="post.user.image" class="card-img-top" alt="..." />
-                <h3 class="card-title fw-bold">
-                  {{ post.user.name }} {{ post.user.surname }}
-                </h3>
-              </div>
-              <p class="card-text fs-6 text-secondary">
-                {{ post.user.title }}
-                <br />
-
-                {{ post.createdAt | dateDay }}
-                <br />
-              </p>
-              <p class="fs-5">{{ post.text }}</p>
+    <div id="myGroup">
+      <div
+        class="container-fluid w-100 mt-5 d-flex justify-content-center panel"
+        *ngFor="let post of posts"
+      >
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex">
+              <img [src]="post.user.image" class="card-img-top" alt="..." />
+              <h3 class="card-title fw-bold">
+                {{ post.user.name }} {{ post.user.surname }}
+              </h3>
             </div>
+            <p class="card-text fs-6 text-secondary">
+              {{ post.user.title }}
+              <br />
 
-            <div class="mt-3 mb-3">
-              <a
-                href="#"
-                class="mx-4 text-decoration-none fs-6 text-black fw-bold"
-                ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
-              >
-              <a
-                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-                data-bs-toggle="collapse"
-                href="#collapse-{{ post._id }}"
-                aria-expanded="false"
-                (click)="loadComments(post._id)"
-                ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
-              >
-              <a
-                href="#"
-                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-                ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
-              >
-              <a
-                href="#"
-                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-                ><i class="bi bi-share"></i> &nbsp; Invia</a
-              >
-            </div>
-            <!-- Collapse dei commenti -->
-            <div
-              class="collapse"
-              id="collapse-{{ post._id }}"
-              data-bs-parent="#myGroup"
+              {{ post.createdAt | dateDay }}
+              <br />
+            </p>
+            <p class="fs-5">{{ post.text }}</p>
+          </div>
+
+          <div class="mt-3 mb-3">
+            <a
+              href="#"
+              class="mx-4 text-decoration-none fs-6 text-black fw-bold"
+              ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
             >
-              <div class="card card-body">
-                <div
-                  class="comments mx-3 my-2"
-                  *ngFor="let comment of comments"
-                >
-                  <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
-                  <div class="comment-bubble mx-4">
-                    {{ comment.comment }}
-                  </div>
+            <a
+              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+              data-bs-toggle="collapse"
+              href="#collapse-{{ post._id }}"
+              aria-expanded="false"
+              (click)="loadComments(post._id)"
+              ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
+            >
+            <a
+              href="#"
+              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+              ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
+            >
+            <a
+              href="#"
+              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+              ><i class="bi bi-share"></i> &nbsp; Invia</a
+            >
+          </div>
+          <!-- Collapse dei commenti -->
+          <div
+            class="collapse"
+            id="collapse-{{ post._id }}"
+            data-bs-parent="#myGroup"
+          >
+            <div class="card card-body">
+              <div class="comments mx-3 my-2" *ngFor="let comment of comments">
+                <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
+                <div class="comment-bubble mx-4">
+                  {{ comment.comment }}
                 </div>
-                <!-- Inserisci commento -->
-                <input
-                  type="text"
-                  id="commento"
-                  placeholder="Aggiungi un commento"
-                  [(ngModel)]="currentComment"
-                  name="title"
-                  class="d-block w-100 rounded-2 my-2"
-                  [value]="currentComment"
-                />
-                <button
-                  class="btn-send mb-2"
-                  data-bs-toggle="collapse"
-                  attr.data-bs-target="#collapse-{{ post._id }}"
-                  aria-expanded="false"
-                  *ngIf="currentComment.length > 3"
-                  (click)="addComment(post._id)"
-                >
-                  Pubblica
-                </button>
-
-                <!-- Commenti -->
               </div>
+              <!-- Inserisci commento -->
+              <input
+                type="text"
+                id="commento"
+                placeholder="Aggiungi un commento"
+                [(ngModel)]="currentComment"
+                name="title"
+                class="d-block w-100 rounded-2 my-2"
+                [value]="currentComment"
+              />
+              <button
+                class="btn-send mb-2"
+                data-bs-toggle="collapse"
+                attr.data-bs-target="#collapse-{{ post._id }}"
+                aria-expanded="false"
+                *ngIf="currentComment.length > 3"
+                (click)="addComment(post._id)"
+              >
+                Pubblica
+              </button>
+
+              <!-- Commenti -->
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="col"></div>
   </div>
 </div>
