--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -75,6 +75,7 @@
         *ngFor="let post of posts"
       >
         <div class="card">
+          <!-- Info post -->
           <div class="card-body">
             <div class="d-flex">
               <img [src]="post.user.image" class="card-img-top" alt="..." />
@@ -91,12 +92,13 @@
             </p>
             <p class="fs-5">{{ post.text }}</p>
           </div>
-
+          <!-- Pulsanti post -->
           <div class="mt-3 mb-3">
             <a
               href="#"
               class="mx-4 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
+              ><i class="bi bi-hand-thumbs-up text-truncate"></i> &nbsp;
+              Consiglia</a
             >
             <a
               class="mx-3 text-decoration-none fs-6 text-black fw-bold"
@@ -104,17 +106,18 @@
               href="#collapse-{{ post._id }}"
               aria-expanded="false"
               (click)="loadComments(post._id)"
-              ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
+              ><i class="bi bi-chat-text text-truncate"></i> &nbsp; Commenta</a
             >
             <a
               href="#"
               class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
+              ><i class="bi bi-upload text-truncate"></i> &nbsp; Diffondi il
+              post</a
             >
             <a
               href="#"
               class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-share"></i> &nbsp; Invia</a
+              ><i class="bi bi-share text-truncate"></i> &nbsp; Invia</a
             >
           </div>
           <!-- Collapse dei commenti -->
@@ -123,13 +126,7 @@
             id="collapse-{{ post._id }}"
             data-bs-parent="#myGroup"
           >
-            <div class="card card-body">
-              <div class="comments mx-3 my-2" *ngFor="let comment of comments">
-                <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
-                <div class="comment-bubble mx-4">
-                  {{ comment.comment }}
-                </div>
-              </div>
+            <div class="card card-body w-100">
               <!-- Inserisci commento -->
               <input
                 type="text"
@@ -150,6 +147,19 @@
               >
                 Pubblica
               </button>
+              <!-- Commenti -->
+              <div
+                class="comments mx-3 my-2 row justify-content-center align-items-center"
+                *ngFor="let comment of comments"
+              >
+                <div class="col-1">
+                  <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
+                </div>
+
+                <div class="comment-bubble mx-4 col-9">
+                  {{ comment.comment }}
+                </div>
+              </div>
 
               <!-- Commenti -->
             </div>
