--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="empty"></div>
-<div class="row row-cols-3">
+<div class="row justify-content-center">
   <!-- Colonna di sinistra -->
-  <div class="col d-none d-lg-block" id="first-col">
+  <div class="col-3 d-none d-lg-block" id="first-col">
     <div class="card" style="width: 18rem">
       <div class="position-relative div-img-profile w-100 m-0 p-0">
         <!-- Copertina -->
@@ -44,7 +44,7 @@
   </div>
 
   <!-- Colonna centrale -->
-  <div class="col">
+  <div class="col-8">
     <!-- Parte alta -->
     <div
       class="container d-flex flex-column justify-content-center align-items-center m-1"
@@ -152,11 +152,12 @@
                 class="comments mx-3 my-2 row justify-content-center align-items-center"
                 *ngFor="let comment of comments"
               >
-                <div class="col-1">
+                <p *ngIf="profileData?._id === comment.elementId">tuo</p>
+                <div class="col-2">
                   <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
                 </div>
 
-                <div class="comment-bubble mx-4 col-9">
+                <div class="comment-bubble mx-3 col-9">
                   {{ comment.comment }}
                 </div>
               </div>
