--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -86,7 +86,8 @@ img{
 }
 
 #first-col{
-  padding-left: 60px;
+  padding-left: 160px;
+
 }
 
 
@@ -124,4 +125,9 @@ img{
   p{
     font-size: 0.8em;
   }
+}
+
+right-col{
+  width: 400px;
+
 }
