--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="empty"></div>
 <div class="row justify-content-center">
   <!-- Colonna di sinistra -->
-  <div class="col-3 d-none d-lg-block" id="first-col">
+  <div class="col-3 d-none d-xl-block" id="first-col">
     <div class="card" style="width: 18rem">
       <div class="position-relative div-img-profile w-100 m-0 p-0">
         <!-- Copertina -->
@@ -47,7 +47,7 @@
   <div class="col-8">
     <!-- Parte alta -->
     <div
-      class="container d-flex flex-column justify-content-center align-items-center m-1"
+      class="container d-flex flex-column justify-content-center align-items-center"
       id="new-post"
     >
       <div class="d-flex mb-3">
